Creates the basic navigation bar for desktop

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,29 @@
     <link rel="stylesheet" href="./css/style.css" type="text/css">
     <title>Star Language Institute</title>
 </head>
+
 <body>
-    <h1 class="text-darkBlue">Hello</h1>
+    <!-- First screen -->
+    <div class="relative container p-1 first">
+        <!-- Nav -->
+        <nav class="container  mx-auto px-6 py-1">
+            <div class=" mx-auto flex items-center justify-between">
+                <div class="p-2">
+                    <img src="./assets/logo.svg" alt="">
+                </div>
+                <div class="hidden md:flex space-x-12 pr-8">
+                    <a href="#">Home</a>
+                    <a href="#">About us</a>
+                    <a href="#">Services</a>
+                    <a href="#">Contact Us</a>
+                </div>
+                <!-- <div>
+                <a href="" class="rounded-full bg-brightOrange px-6 p-2 ">Get Started</a>
+            </div> -->
+            </div>
+        </nav>
+      
+    </div>
 </body>
+
 </html>
