ft:Adds a responsive hero page

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 
 <body>
     <!-- First screen -->
-    <div class="relative container p-1 first">
+    <div class="relative  p-1 first">
         <!-- Nav -->
-        <nav class="container  mx-auto px-6 py-1">
+        <nav class="  mx-auto px-6 py-1 mb-5">
             <div class=" mx-auto flex items-center justify-between">
-                <div class="p-2">
+                <div class="p-2 flex items-center">
                     <img src="./assets/logo.svg" alt="">
+                    <p class="tracking-tighter font-serif">Star Language Institute</p>
                 </div>
                 <div class="hidden md:flex space-x-12 pr-8">
                     <a href="#">Home</a>
@@ -30,7 +31,21 @@
             </div> -->
             </div>
         </nav>
-      
+        <!-- HERO SECTION -->
+        <section class="section w-screen flex flex-col place-content-center items-center">
+            <p class="break-normal text-center text-2xl align-top mb-6 tracking-wider">Star Language Institute</p>
+            <p id="quote" class="break-normal w-1/2 leading-loose text-center text-1xl align-baseline mb-6 tracking-wide whitespace-normal">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Voluptatem rem perspiciatis et libero animi necessitatibus? Omnis!</p>
+                <span id="author"></span>
+            <a href="" class="rounded-md text-white bg-darkBlue px-6 m-2 py-3">Get Started</a>
+            <img src="./assets/lady.svg" class="m-2 mt-6 lady lg:hidden" alt="">
+        </section>
+        <div class="background-orange rounded-full bg-brightOrange absolute"></div>
+        <img src="./assets/boy.svg" class="hidden lg:block absolute boy" alt="">
+        <img src="./assets/students.svg" class="hidden lg:block absolute students" alt="">
+        <img src="./assets/boy2.svg" class="hidden lg:block absolute boy2" alt="">
+
+        <!-- <img src="./assets/shape.svg" class="absolute shape" alt=""> -->
     </div>
 </body>
 
