ft:Adds the about us section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <!-- First screen -->
-    <div class="relative  p-1 first">
+    <div class="relative h-screen p-1 first">
         <!-- Nav -->
         <nav class="  mx-auto px-6 py-1 mb-5">
             <div class=" mx-auto flex items-center justify-between">
@@ -33,10 +33,12 @@
         </nav>
         <!-- HERO SECTION -->
         <section class="section w-screen flex flex-col place-content-center items-center">
-            <p class="break-normal text-center text-2xl align-top mb-6 tracking-wider">Star Language Institute</p>
-            <p id="quote" class="break-normal w-1/2 leading-loose text-center text-1xl align-baseline mb-6 tracking-wide whitespace-normal">Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            <p class="break-normal text-center font-bold text-2xl align-top mb-6 tracking-wider not-italic title">Star Language Institute</p>
+            <p id="quote"
+                class="break-normal font-extralight text-3xl font-sans w-1/2 leading-loose text-center text-1xl align-baseline mb-6 tracking-wide whitespace-normal">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                 Voluptatem rem perspiciatis et libero animi necessitatibus? Omnis!</p>
-                <span id="author"></span>
+            <span id="author"></span>
             <a href="" class="rounded-md text-white bg-darkBlue px-6 m-2 py-3">Get Started</a>
             <img src="./assets/lady.svg" class="m-2 mt-6 lady lg:hidden" alt="">
         </section>
@@ -47,6 +49,28 @@
 
         <!-- <img src="./assets/shape.svg" class="absolute shape" alt=""> -->
     </div>
+    <!-- About us Page -->
+    <section class="container mx-auto flex flex-col md:flex-row items-center justify-center mt-9 m-6">
+        <div class="about-img w-3/4">
+            <img src="./assets/about.svg" alt="">
+        </div>
+        <div class="text w-1/4 break-normal">
+            <p>Lorem ipsum dolor sit amet.
+                Illum qui sit enim excepturi!
+                Tempore consequuntur molestias iure aliquid.
+                Odio deleniti impedit animi harum!
+                Odit suscipit cupiditate aspernatur optio.
+                Assumenda praesentium tenetur optio perferendis.
+                Natus omnis dolores laborum quod.</p>
+            <p>Lorem ipsum dolor sit amet.
+                Illum qui sit enim excepturi!
+                Tempore consequuntur molestias iure aliquid.
+                Odio deleniti impedit animi harum!
+                Odit suscipit cupiditate aspernatur optio.
+                Assumenda praesentium tenetur optio perferendis.
+                Natus omnis dolores laborum quod.</p>
+        </div>
+    </section>
 </body>
 
 </html>
