--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             <div class=" mx-auto flex items-center justify-between">
                 <div class="p-2 flex items-center">
                     <img src="./assets/logo.svg" alt="">
-                    <p class="tracking-tighter font-serif">Star Language Institute</p>
+                    <!-- <p class="tracking-tighter font-serif">Star Language Institute</p> -->
                 </div>
                 <div class="hidden md:flex space-x-12 pr-8">
-                    <a href="#">Home</a>
-                    <a href="#">About us</a>
-                    <a href="#">Services</a>
-                    <a href="#">Contact Us</a>
+                    <a href="#" class="font bold text-1xl">Home</a>
+                    <a href="#" class="font bold text-1xl">About us</a>
+                    <a href="#" class="font bold text-1xl">Services</a>
+                    <a href="#" class="font bold text-1xl">Contact Us</a>
                 </div>
                 <!-- <div>
                 <a href="" class="rounded-full bg-brightOrange px-6 p-2 ">Get Started</a>
@@ -33,9 +33,10 @@
         </nav>
         <!-- HERO SECTION -->
         <section class="section w-screen flex flex-col place-content-center items-center">
-            <p class="break-normal text-center font-bold text-2xl align-top mb-6 tracking-wider not-italic title">Star Language Institute</p>
+            <p class="break-normal text-center font-bold text-2xl align-top mb-6 tracking-wider not-italic title md:text-3xl">Star
+                Language Institute</p>
             <p id="quote"
-                class="break-normal font-extralight text-3xl font-sans w-1/2 leading-loose text-center text-1xl align-baseline mb-6 tracking-wide whitespace-normal">
+                class="break-normal font-extralight text-1xl font-sans w-1/2 leading-loose text-center text-1xl align-baseline mb-6 tracking-wide whitespace-normal md:text-3xl">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                 Voluptatem rem perspiciatis et libero animi necessitatibus? Omnis!</p>
             <span id="author"></span>
@@ -46,15 +47,19 @@
         <img src="./assets/boy.svg" class="hidden lg:block absolute boy" alt="">
         <img src="./assets/students.svg" class="hidden lg:block absolute students" alt="">
         <img src="./assets/boy2.svg" class="hidden lg:block absolute boy2" alt="">
+        <img src="./assets/world.svg" class="hidden lg:block absolute world" alt="">
+        <img src="./assets/star2.svg" class="hidden lg:block absolute star2" alt="">
+        <img src="./assets/star1.svg" class="hidden lg:block absolute star1" alt="">
+        <img src="./assets/circle.svg" class="hidden lg:block absolute circle" alt="">
 
         <!-- <img src="./assets/shape.svg" class="absolute shape" alt=""> -->
     </div>
     <!-- About us Page -->
     <section class="container mx-auto flex flex-col md:flex-row items-center justify-center mt-9 m-6">
-        <div class="about-img w-3/4">
+        <div class="about-img w-1/2">
             <img src="./assets/about.svg" alt="">
         </div>
-        <div class="text w-1/4 break-normal">
+        <div class="text w-1/2 break-normal">
             <p>Lorem ipsum dolor sit amet.
                 Illum qui sit enim excepturi!
                 Tempore consequuntur molestias iure aliquid.
