--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
         </nav>
         <!-- HERO SECTION -->
-        <section class="section relative  w-screen  max-h-fit  flex flex-col place-content-center items-center ">
+        <section class="section relative  w-screen  max-h-fit  flex flex-col place-content-center items-center">
             <p
                 class="break-normal text-center font-bold text-2xl align-top mb-6 tracking-wider not-italic title md:text-3xl">
                 Star
@@ -49,10 +49,10 @@
         <img src="./assets/boy.svg" class="hidden lg:block absolute boy" alt="">
         <img src="./assets/students.svg" class="hidden lg:block absolute students" alt="">
         <img src="./assets/boy2.svg" class="hidden lg:block absolute boy2" alt="">
-        <img src="./assets/world.svg" class="hidden xl:block absolute world" alt="">
-        <img src="./assets/star2.svg" class="hidden lg:block absolute star2" alt="">
-        <img src="./assets/star1.svg" class="hidden lg:block absolute star1" alt="">
-        <img src="./assets/circle.svg" class="hidden lg:block absolute circle" alt="">
+        <img src="./assets/world.svg" class="hidden xl:block absolute world blur-sm" alt="">
+        <img src="./assets/star2.svg" class="hidden lg:block absolute star2 blur-sm" alt="">
+        <img src="./assets/star1.svg" class="hidden lg:block absolute star1 blur-sm " alt="">
+        <img src="./assets/circle.svg" class="hidden lg:block absolute circle blur-sm" alt="">
 
         <!-- <img src="./assets/shape.svg" class="absolute shape" alt=""> -->
     </div>
@@ -117,18 +117,18 @@
         </div>
     </section>
     <!-- Form  -->
-    <section class=" mt-12 container mx-auto">
+    <section class=" mt-12 h-full container mx-auto">
         <blockquote class="text-2xl font-semibold italic text-center text-slate-900">
-            Are you intrested in
+            Are you interested in
             <span
                 class="before:block before:absolute before:-inset-1 before:-skew-y-3 before:bg-brightOrange relative inline-block">
                 <span class="relative text-white">learning </span>
             </span>
             more ? <br> Reach us below ...
         </blockquote>
-        <div class="flex flex flex-col md:flex-row max-hgrey-3 items-center jusify-center">
-            <div class="image w-3/4 md:w-1/2">
-                <img src="./assets/rafiki.svg" alt="">
+        <div class="flex flex h-3/4 flex-col md:flex-row items-center jusify-center">
+            <div class="image w-3/4 md:w-1/2 h-3/4">
+                <img src="./assets/rafiki.svg" class="h-3/4" alt="">
             </div>
             <div class=" w-3/4 md:w-1/2 ">
                 <form class="space-y-4">
@@ -136,19 +136,19 @@
                         <label class="block py-2 ">
                             <span class="font-light text-darkBlue">Enter Your Name</span>
                             <input type="text" name="name" placeholder="Enter your name" id="name"
-                                class="placeholder:italic placeholder:text-grey  border-0 border-b-2 border-dark focus:border-brightOrange block mt-1 focus:ring-0 rounded">
+                                class="placeholder:italic placeholder:text-grey caret-brightOrange border-0 border-b-2 border-dark focus:border-brightOrange block mt-1 focus:ring-0 rounded">
                         </label>
                         <label class="block py-2 ">
                             <span class="font-light text-darkBlue">Enter Your Phone Number</span>
                             <input type="tel" name="number" placeholder="Enter your number" id="number"
-                                class="placeholder:italic placeholder:text-grey  border-0 border-b-2 border-dark focus:border-brightOrange block mt-1 focus:ring-0 rounded">
+                                class="placeholder:italic caret-brightOrange placeholder:text-grey  border-0 border-b-2 border-dark focus:border-brightOrange block mt-1 focus:ring-0 rounded">
                         </label>
                     </div>
                     <div class="container flex flex-col md:flex-row md:space-x-5">
                         <label class="block py-2 ">
                             <span class="font-light text-darkBlue">Enter Your Email</span>
                             <input type="email" name="number" placeholder="someone@mail.com" id="number"
-                                class="placeholder:italic placeholder:text-grey  border-0 border-b-2 border-dark focus:border-brightOrange block mt-1 focus:ring-0 rounded">
+                                class="placeholder:italic caret-brightOrange placeholder:text-grey  border-0 border-b-2 border-dark focus:border-brightOrange block mt-1 focus:ring-0 rounded">
                         </label>
                         <label class="block py-2 ">
                             <span class="font-light text-darkBlue">Language</span>
@@ -167,9 +167,9 @@
                         <span class="font-light text-darkBlue">Enter Your Query Below</span>
                         <textarea name="comment" id="comment" rows="3"
                             placeholder="Give us some more details to improve your experience"
-                            class="placeholder:italic placeholder:text-grey mt-1  block border-black px-0.5 border-0 border-b-2 focus:border-brightOrange focus:ring-0 rounded w-3/4"></textarea>
+                            class="placeholder:italic placeholder:text-grey mt-1 caret-brightOrange block border-black px-0.5 border-0 border-b-2 focus:border-brightOrange focus:ring-0 rounded w-3/4"></textarea>
                     </label>
-                    
+                    <a href="" type= submit class="rounded hover:rounded-lg bg-brightOrange px-6 p-2 ">Get Started</a>
                 </form>
             </div>
         </div>
