--- a/index.html
+++ b/index.html
@@ -116,8 +116,63 @@
 
         </div>
     </section>
+    <!-- Languages -->
+    <section class="container min-h-fill flex flex-col justify-center items-center w-screen">
+        <p class="text-center antialiased">
+            Languages
+        </p>
+        <div class="flex flex-col-reverse md:flex-row items-center justify-evenly min-w-fill">
+            <div class="flex-col items-center justify-center  w-3/4 md:w-1/4">
+                <div class="text-justify antialiased">
+                    <p>Lorem ipsum dolor sit amet consectetur.
+                    Temporibus ut nobis praesentium dignissimos hic?
+                    Quae similique numquam nesciunt neque commodi!</p>
+                </div>
+                <div class="flex items-center justify-center">
+                    <p>price</p>
+                    <p>duration</p>
+                </div>
+            </div>
+            <div class=" -translate-x-6  w-3/4 md:w-1/2 h-3/4">
+                <img src="./assets/arabic.jpg" width="500" class="object-cover rounded-lg" alt="">
+            </div>
+        </div>
+        <div class="flex flex-col md:flex-row items-center justify-center">
+            <div class="">
+                <img src="./assets/english.jpg" class="object-cover rounded-lg" width="500" alt="">
+            </div>
+            <div class="flex-col items-center justify-center">
+                <div class="">
+                    <p>Lorem ipsum dolor sit amet consectetur.
+                    Temporibus ut nobis praesentium dignissimos hic?
+                    Quae similique numquam nesciunt neque commodi!</p>
+                </div>
+                <div class="flex items-center justify-center">
+                    <p>price</p>
+                    <p>duration</p>
+                </div>
+            </div>
+            
+        </div>
+        <div class="flex flex-col-reverse md:flex-row items-center justify-center">
+            <div class="flex-col items-center justify-center">
+                <div class="">
+                    <p>Lorem ipsum dolor sit amet consectetur.
+                    Temporibus ut nobis praesentium dignissimos hic?
+                    Quae similique numquam nesciunt neque commodi!</p>
+                </div>
+                <div class="flex items-center justify-center">
+                    <p>price</p>
+                    <p>duration</p>
+                </div>
+            </div>
+            <div class="">
+                <img src="./assets/swahili.webp" class="object-cover rounded-lg shadow-xl"  width="500" alt="">
+            </div>
+        </div>
+    </section>
     <!-- Form  -->
-    <section class=" mt-12 h-full container mx-auto">
+    <section class=" mt-12 h-full container mx-auto bg-lightGrey">
         <blockquote class="text-2xl font-semibold italic text-center text-slate-900">
             Are you interested in
             <span
