--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
         </div>
     </section>
     <!-- Languages -->
-    <section class="container min-h-fill flex flex-col justify-center items-center w-screen">
+    <section class="container min-h-screen space-y-3 flex flex-col justify-center items-center w-screen">
         <p class="text-center antialiased">
             Languages
         </p>
-        <div class="flex flex-col-reverse md:flex-row items-center justify-evenly min-w-fill">
+        <div class="flex flex-col-reverse md:flex-row items-center justify-around min-w-fill">
             <div class="flex-col items-center justify-center  w-3/4 md:w-1/4">
                 <div class="text-justify antialiased">
                     <p>Lorem ipsum dolor sit amet consectetur.
@@ -133,16 +133,16 @@
                     <p>duration</p>
                 </div>
             </div>
-            <div class=" -translate-x-6  w-3/4 md:w-1/2 h-3/4">
+            <div class=" -translate-x-6  w-3/4 md:w-1/3 h-3/4">
                 <img src="./assets/arabic.jpg" width="500" class="object-cover rounded-lg" alt="">
             </div>
         </div>
-        <div class="flex flex-col md:flex-row items-center justify-center">
-            <div class="">
+        <div class="flex flex-col md:flex-row items-center justify-around min-w-fill">
+            <div class=" -translate-x-6  w-3/4 md:w-1/3 h-3/4">
                 <img src="./assets/english.jpg" class="object-cover rounded-lg" width="500" alt="">
             </div>
-            <div class="flex-col items-center justify-center">
-                <div class="">
+            <div class="flex-col items-center justify-center  w-3/4 md:w-1/4">
+                <div class="text-justify antialiased">
                     <p>Lorem ipsum dolor sit amet consectetur.
                     Temporibus ut nobis praesentium dignissimos hic?
                     Quae similique numquam nesciunt neque commodi!</p>
@@ -154,9 +154,9 @@
             </div>
             
         </div>
-        <div class="flex flex-col-reverse md:flex-row items-center justify-center">
-            <div class="flex-col items-center justify-center">
-                <div class="">
+        <div class="flex flex-col-reverse md:flex-row items-center justify-around min-w-fill">
+            <div class="flex-col items-center justify-center  w-3/4 md:w-1/4">
+                <div class="text-center antialiased">
                     <p>Lorem ipsum dolor sit amet consectetur.
                     Temporibus ut nobis praesentium dignissimos hic?
                     Quae similique numquam nesciunt neque commodi!</p>
@@ -166,13 +166,13 @@
                     <p>duration</p>
                 </div>
             </div>
-            <div class="">
+            <div class=" -translate-x-6  w-3/4 md:w-1/3 h-3/4">
                 <img src="./assets/swahili.webp" class="object-cover rounded-lg shadow-xl"  width="500" alt="">
             </div>
         </div>
     </section>
     <!-- Form  -->
-    <section class=" mt-12 h-full container mx-auto bg-lightGrey">
+    <section class=" mt-12 h-full py-5 mx-auto w-screen bg-lightGrey">
         <blockquote class="text-2xl font-semibold italic text-center text-slate-900">
             Are you interested in
             <span
@@ -181,9 +181,9 @@
             </span>
             more ? <br> Reach us below ...
         </blockquote>
-        <div class="flex flex h-3/4 flex-col md:flex-row items-center jusify-center">
-            <div class="image w-3/4 md:w-1/2 h-3/4">
-                <img src="./assets/rafiki.svg" class="h-3/4" alt="">
+        <div class="flex flex h-1/2 flex-col md:flex-row items-center jusify-center">
+            <div class="image w-1/2 md:w-1/2 h-1/2">
+                <img src="./assets/rafiki.svg" width="600" class="h-3/4" alt="">
             </div>
             <div class=" w-3/4 md:w-1/2 ">
                 <form class="space-y-4">
