--- a/index.html
+++ b/index.html
@@ -118,19 +118,20 @@
     </section>
     <!-- Languages -->
     <section class="container min-h-screen space-y-3 flex flex-col justify-center items-center w-screen">
-        <p class="text-center antialiased">
-            Languages
+        <p class="text-center antialiased text-xl">
+            Our Programs
         </p>
         <div class="flex flex-col-reverse md:flex-row items-center justify-around min-w-fill">
-            <div class="flex-col items-center justify-center  w-3/4 md:w-1/4">
-                <div class="text-justify antialiased">
+            <div class="flex-col items-center justify-center  w-3/4 space-y-2 md:w-1/3">
+                <p class="antialiased text- text-darkBlue text-lg">Arabic</p>
+                <div class="text-left antialiased text-base">
                     <p>Lorem ipsum dolor sit amet consectetur.
                     Temporibus ut nobis praesentium dignissimos hic?
                     Quae similique numquam nesciunt neque commodi!</p>
                 </div>
-                <div class="flex items-center justify-center">
-                    <p>price</p>
-                    <p>duration</p>
+                <div class="flex items-center justify-between">
+                    <p class="antialiased text-darkBlue">Kshs <span>2500</span> per session</p>
+                    <p class="antialiased text-darkBlue">Duration: <span>6</span> months</p>
                 </div>
             </div>
             <div class=" -translate-x-6  w-3/4 md:w-1/3 h-3/4">
@@ -141,29 +142,31 @@
             <div class=" -translate-x-6  w-3/4 md:w-1/3 h-3/4">
                 <img src="./assets/english.jpg" class="object-cover rounded-lg" width="500" alt="">
             </div>
-            <div class="flex-col items-center justify-center  w-3/4 md:w-1/4">
-                <div class="text-justify antialiased">
+            <div class="flex-col items-center justify-center  w-3/4 space-y-2 md:w-1/3">
+                <p class="antialiased text- text-darkBlue text-lg">English</p>
+                <div class="text-left antialiased text-base">
                     <p>Lorem ipsum dolor sit amet consectetur.
                     Temporibus ut nobis praesentium dignissimos hic?
                     Quae similique numquam nesciunt neque commodi!</p>
                 </div>
-                <div class="flex items-center justify-center">
-                    <p>price</p>
-                    <p>duration</p>
+                <div class="flex items-center justify-between">
+                    <p class="antialiased text-darkBlue">Kshs <span>2500</span> per session</p>
+                    <p class="antialiased text-darkBlue">Duration: <span>6</span> months</p>
                 </div>
             </div>
             
         </div>
-        <div class="flex flex-col-reverse md:flex-row items-center justify-around min-w-fill">
-            <div class="flex-col items-center justify-center  w-3/4 md:w-1/4">
-                <div class="text-center antialiased">
+        <div class="flex flex-col-reverse md:flex-row items-center  justify-around min-w-fill">
+            <div class="flex-col items-center justify-center space-y-2 w-3/4 md:w-1/3">
+                <p class="antialiased text- text-darkBlue text-lg">Kiswahili</p>
+                <div class="text-left antialiased text-base">
                     <p>Lorem ipsum dolor sit amet consectetur.
                     Temporibus ut nobis praesentium dignissimos hic?
                     Quae similique numquam nesciunt neque commodi!</p>
                 </div>
-                <div class="flex items-center justify-center">
-                    <p>price</p>
-                    <p>duration</p>
+                <div class="flex items-center justify-between">
+                    <p class="antialiased text-darkBlue">Kshs <span>2500</span> per session</p>
+                    <p class="antialiased text-darkBlue">Duration: <span>6</span> months</p>
                 </div>
             </div>
             <div class=" -translate-x-6  w-3/4 md:w-1/3 h-3/4">
