Adds the link to the programs section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 
 <head>
     <meta charset="UTF-8">
@@ -92,6 +92,7 @@
                     Odit suscipit cupiditate aspernatur optio.
                     Assumenda praesentium tenetur optio perferendis.
                     Natus omnis dolores laborum quod.</p>
+                    <a href="#programs" class="no-underline hover:underline decoration-wavy underline-offset-4 text-darkBlue">view more</a>
             </div>
             <div class="learner ">
                 <img src="./assets/learner.svg" alt="">
@@ -118,7 +119,7 @@
     </section>
     <!-- Languages -->
     <section class="container min-h-screen space-y-3 flex flex-col justify-center items-center w-screen">
-        <p class="text-center antialiased text-xl">
+        <p class="text-center antialiased text-xl underline decoration-wavy underline-offset-8  tracking-wide my-3 text-darkBlue" id="programs">
             Our Programs
         </p>
         <div class="flex flex-col-reverse md:flex-row items-center justify-around min-w-fill">
