--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                 Star
                 Language Institute</p>
             <p id="quote"
-                class="z-3 break-normal font-extralight text-1xl antialiased font-sans w-1/2 leading-loose text-center text-1xl  align-baseline mb-6 tracking-wide whitespace-normal md:text-3xl">
+                class="z-3 break-normal font-extralight text-1xl antialiased font-sans w-1/2 leading-loose text-center text-1xl  align-baseline mb-6 tracking-wide whitespace-normal md:text-3xl" id="quote">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                 Voluptatem rem perspiciatis et libero animi necessitatibus? Omnis!</p>
-            <span id="author z-3"></span>
+            <span id="author" class="mb-3 mt-2 text-sm italic"></span>
             <a href="" class="rounded-md text-white bg-darkBlue px-6 m-2 py-3 z-3">Get Started</a>
             <img src="" id="hero_desktop" class="absolute lady opacity-10 h-full -z-1 lg:hidden" alt="">
         </section>
@@ -194,7 +194,7 @@
                 <img src="./assets/rafiki.svg" width="600" class="h-3/4" alt="">
             </div>
             <div class=" w-3/4 md:w-1/2 ">
-                <form class="space-y-4">
+                <form class="space-y-4" id="address-form">
                     <div class="container flex flex-col md:flex-row md:space-x-5">
                         <label class="block py-2 ">
                             <span class="font-light text-darkBlue">Enter Your Name</span>
@@ -232,7 +232,7 @@
                             placeholder="Give us some more details to improve your experience"
                             class="placeholder:italic placeholder:text-grey mt-1 caret-brightOrange block border-black px-0.5 border-0 border-b-2 focus:border-brightOrange focus:ring-0 rounded w-3/4"></textarea>
                     </label>
-                    <a href="" type= submit class="rounded hover:rounded-lg bg-brightOrange px-6 p-2 ">Get Started</a>
+                    <a href="" type= submit class="rounded hover:rounded-lg bg-brightOrange px-6 p-2 text-white">Get Started</a>
                 </form>
             </div>
         </div>
