Adds responsiveness to the footer

--- a/index.html
+++ b/index.html
@@ -244,13 +244,13 @@
     </section>
     <!-- Footer -->
     <footer class="bg-footerDark flex flex-col justify-between align-items text-white h-70 p-12 space-y-16 font-light text-xs">
-        <div class="flex flex-between">
+        <div class="flex flex-col space-y-3 align-items w-3/4 md:w-full md:flex-row flex-between">
             <div class="w-1/3 space-y-2">
                 <p class="text-base">Ready to get started ?</p>
                 <a href="" type=submit class="rounded hover:rounded-lg bg-brightOrange px-12 p-2 text-white">Get
                     Started</a>
             </div>
-            <div class="grid grid-cols-3 gap-4 w-3/4 ">
+            <div class="grid grid-rows-3 md:grid-cols-3 gap-4 w-3/4 ">
                 <div class="space-y-1">
                     <p class="text-brightOrange mb-3">Contact info</p>
                     <p>Director : Najma Hussein</p>
