--- a/index.html
+++ b/index.html
@@ -243,14 +243,14 @@
         </div>
     </section>
     <!-- Footer -->
-    <footer class="bg-footerDark flex flex-col justify-between align-items text-white h-70 p-12 space-y-16 font-light text-xs">
-        <div class="flex flex-col space-y-3 align-items w-3/4 md:w-full md:flex-row flex-between">
-            <div class="w-1/3 space-y-2">
+    <footer class="bg-footerDark flex flex-col justify-between align-items text-white min-h-fit p-3 md:p-12 space-y-10 font-light text-xs">
+        <div class="flex flex-col space-y-6 space-x-3 align-items w-full  md:flex-row flex-between">
+            <div class="hidden md:block w-1/3 space-y-2">
                 <p class="text-base">Ready to get started ?</p>
                 <a href="" type=submit class="rounded hover:rounded-lg bg-brightOrange px-12 p-2 text-white">Get
                     Started</a>
             </div>
-            <div class="grid grid-rows-3 md:grid-cols-3 gap-4 w-3/4 ">
+            <div class="grid grid-flow-row auto-rows-fr md:grid-flow-col md:auto-cols-max gap-x-40 w-full md:w-3/4 ">
                 <div class="space-y-1">
                     <p class="text-brightOrange mb-3">Contact info</p>
                     <p>Director : Najma Hussein</p>
@@ -273,12 +273,12 @@
                 
             </div>
         </div>
-        <div class="flex justify-between align-items">
-            <div class="space-x-5">
+        <div class="flex justify-between align-items space-x-5">
+            <div class="space-x-2 md:space-x-5">
                 <a href="">Terms and Conditions</a>
                 <a href="">Privacy Policy</a>
             </div>
-            <div class="flex space-x-12">
+            <div class="flex space-x-2 md:space-x-12">
                 <a href=""> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="bi bi-instagram stroke-1 hover:stroke-2" viewBox="0 0 16 16">
                         <path
