--- a/index.html
+++ b/index.html
@@ -34,15 +34,14 @@
         <!-- HERO SECTION -->
         <section class="section relative  w-screen  max-h-fit  flex flex-col place-content-center items-center">
             <p
-                class="break-normal text-center font-bold text-2xl align-top mb-6 tracking-wider not-italic title md:text-3xl">
+                class="break-normal text-center font-bold text-2xl align-top  tracking-wider not-italic title md:text-3xl">
                 Star
                 Language Institute</p>
+                <p id="tag_line" class="mb-6"></p>
             <p id="quote"
-                class="z-3 break-normal font-extralight text-1xl antialiased font-sans w-1/2 leading-loose text-center text-1xl  align-baseline mb-6 tracking-wide whitespace-normal md:text-3xl"
-                id="quote">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Voluptatem rem perspiciatis et libero animi necessitatibus? Omnis!</p>
-            <span id="author" class="mb-3 mt-2 text-sm italic"></span>
+                class="z-3 break-normal font-extralight text-1xl antialiased font-sans w-1/2 leading-loose text-center text-1xl  align-baseline mb-1 tracking-wide whitespace-normal md:text-3xl"
+                id="quote"></p>
+            <span id="author" class="mb-6 mt-2 text-sm font-extralight font-sans"></span>
             <a href="" class="rounded-md text-white bg-darkBlue px-6 m-2 py-3 z-3">Get Started</a>
             <img src="" id="hero_desktop" class="absolute lady opacity-10 h-full -z-1 lg:hidden" alt="">
         </section>
@@ -131,9 +130,9 @@
             Our Programs
         </p>
         <div class="flex flex-col-reverse md:flex-row items-center justify-around min-w-fill" id="1">
-            <div class="flex-col items-center justify-center  w-3/4 space-y-2 md:w-1/3" >
+            <div class="flex-col items-center justify-center  w-3/4 space-y-2 md:w-1/3">
                 <p class="antialiased text- text-darkBlue text-lg name" id="1_name"></p>
-                <div class="text-left antialiased text-base" >
+                <div class="text-left antialiased text-base">
                     <p id="1_description"></p>
                 </div>
                 <div class="flex items-center justify-between">
@@ -164,8 +163,8 @@
         <div class="flex flex-col-reverse md:flex-row items-center  justify-around min-w-fill">
             <div class="flex-col items-center justify-center space-y-2 w-3/4 md:w-1/3">
                 <p class="antialiased text- text-darkBlue text-lg" id="3_name"></p>
-                <div class="text-left antialiased text-base" >
-                    <p id="3_description" ></p>
+                <div class="text-left antialiased text-base">
+                    <p id="3_description"></p>
                 </div>
                 <div class="flex items-center justify-between">
                     <p class="antialiased text-darkBlue"> $ <span id="3_price"></span> per session</p>
