Added responsiveness to the ladning page on mobile

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
             </div>
         </nav>
         <!-- HERO SECTION -->
-        <section class="section relative  w-screen  max-h-fit  flex flex-col place-content-center items-center">
+        <section class="section relative  w-screen  max-h-fit  flex flex-col place-content-center items-center z-10">
             <p
                 class="break-normal text-center font-bold text-2xl align-top  tracking-wider not-italic title md:text-3xl">
                 Star
                 Language Institute</p>
-                <p id="tag_line" class="mb-6"></p>
+                <p id="tag_line" class="mb-6 font-extralight"></p>
             <p id="quote"
                 class="z-3 break-normal font-extralight text-1xl antialiased font-sans w-1/2 leading-loose text-center text-1xl  align-baseline mb-1 tracking-wide whitespace-normal md:text-3xl"
                 id="quote"></p>
@@ -47,8 +47,8 @@
         </section>
         <div class="background-orange rounded-full bg-brightOrange absolute"></div>
         <img src="" id="hero_mobile" class=" opacity-25 absolute hidden lg:block absolute boy" alt="">
-        <img src="" id="about_mobile" class="hidden lg:block absolute students" alt="">
-        <img src="" id="hero_svg5" class="hidden lg:block absolute boy2" alt="">
+        <img src="" id="about_mobile" class=" opacity-25 hidden lg:block absolute students" alt="">
+        <img src="" id="hero_svg5" class="opacity-25 hidden lg:block absolute boy2" alt="">
         <img src="" id="hero_svg4" class="hidden xl:block absolute world blur-sm" alt="">
         <img src="" id="hero_svg2" class="hidden lg:block absolute star2 blur-sm" alt="">
         <img src="" id="hero_svg1" class="hidden lg:block absolute star1 blur-sm " alt="">
@@ -240,28 +240,28 @@
     <footer
         class="bg-footerDark flex flex-col justify-between align-items text-white min-h-fit p-3 md:p-12 space-y-10 font-light text-xs">
         <div class="flex flex-col space-y-6 space-x-3 align-items w-full  md:flex-row flex-between">
-            <div class="hidden md:block w-1/3 space-y-2">
+            <div class="hidden md:block w-1/3 space-y-2 my-auto">
                 <p class="text-base">Ready to get started ?</p>
                 <a href="" type=submit class="rounded hover:rounded-lg bg-brightOrange px-12 p-2 text-white">Get
                     Started</a>
             </div>
             <div class="grid grid-flow-row auto-rows-fr md:grid-flow-col md:auto-cols-max gap-x-40 w-full md:w-3/4 ">
                 <div class="space-y-1">
-                    <p class="text-brightOrange mb-3">Contact info</p>
+                    <p class="text-brightOrange my-3">Contact info</p>
                     <p>Director : <span id="founder_name"></span></p>
                     <p>Primary : <span id="primary_phoneNumber"></span></p>
                     <p>Secondary: <span id="secondary_phoneNumber"></span></p>
                     <p>Email:<span id="contact_email"></span></p>
                 </div>
                 <div class="space-y-1">
-                    <p class="text-brightOrange mb-3">About</p>
+                    <p class="text-brightOrange my-3">About</p>
                     <p>Home</p>
                     <p>About us</p>
                     <p>Services</p>
                     <p>Programs</p>
                 </div>
                 <div class="space-y-1">
-                    <p class="text-brightOrange mb-3">Help</p>
+                    <p class="text-brightOrange my-3">Help</p>
                     <p>Faqs</p>
                     <p>Contact us</p>
                 </div>
